--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
   <p><strong>İstanbul Bilgi Üniversitesi</strong><br />
   Ön Lisans - Bilgi Güvenliği<br />
   Eylül 2022 - Temmuz 2024<br />
-  İlgili Dersler: Bilgi Güvenliği, Ağ Güvenliği, İşletim Sistemleri, Veritabanı Sistemleri, Güvenlik Operasyonları, Risk Yönetimi, İş Yazılımları</p>
+  İlgili Dersler: Bilgi Güvenliği, Ağ Güvenliği, Algoritma, Veritabanı Sistemleri, Güvenlik Operasyonları, Risk Yönetimi, Splunk</p>
 </div>
 
 <div class="section">
@@ -304,12 +304,12 @@
     <li>ISO 27001 eğitimi tamamlayarak bilgi güvenliği yönetim sistemleri (ISMS) hakkında bilgi edindim.</li>
     <li>Yapılandırılmış eğitimlerle ekip işbirliğini ve bilgi paylaşımını geliştirdim.</li>
   </ul>
-  <p><strong>SOME - Stajyerİ</strong><br />
+  <p><strong>SOME - Stajyeri</strong><br />
   Haziran 2023 - Eylül 2023</p>
   <ul>
     <li>Gerçek dünya kurumsal ortamlarını simüle etmek için Active Directory ortamı kurdum ve yönettim.</li>
     <li>Splunk kullanarak anormal kullanıcı davranışı, lateral hareketler ve ayrıcalık yükseltme girişimleri üzerinde tehdit avcılığı yaptım.</li>
-    <li>PsExec gibi araçları kullanan saldırıları tespit edip analiz ederek post-exploitation deneyimi kazandım.</li>
+    <li>PsExec gibi uzak yürütme araçlarını kullanan saldırıların tespiti ve analizi üzerine post-exploitation sürecine dair pratik tecrübe edindim</li>
   </ul>
 </div>
 
