--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     font-weight: 700;
     text-shadow: 0 0 10px #1DB7F1cc;
   }
-  .card, .about, .skills, .social, .cert-image, .section {
+  .card, .about, .skills, .social, .cert-image, .section,.yazilarim {
     max-width: 900px;
     margin: 2rem auto;
     padding: 2rem;
@@ -318,6 +318,11 @@
 <div id="langSwitcher" aria-label="Dil seçimi">
   <button id="trBtn" class="active" aria-pressed="true" type="button">Türkçe</button>
   <button id="enBtn" aria-pressed="false" type="button">English</button>
+<a href="yazilarim.html">
+  <button id="enBtn" aria-pressed="false" type="button">
+    Siber Güvenlik Bloğu
+  </button>
+</a>
 </div>
 
 <div class="terminal-line">whoami <span>&gt;</span> msksec</div>
@@ -343,7 +348,6 @@
     <h3>Profesyonel Özet</h3>
     <p>Siber güvenlikle 2 yıldır ilgileniyorum. Özellikle SOC analizi ve olay müdahalesi üzerine odaklandım. LetsDefend’de 65+ uyarıyı çözdüm, CyberExam’de 50+ modülü tamamladım ve HTB CDSA (Certified Defensive Security Analyst) sertifikasını aldım.</p>
   </div>
-
   <div class="section">
     <h3>Eğitim</h3>
     <p><strong>İstanbul Bilgi Üniversitesi</strong><br />
@@ -419,7 +423,7 @@
     <h3>Professional Summary</h3>
     <p>I have been interested in cybersecurity for 2 years, mainly focusing on SOC analysis and incident response. I resolved 65+ alerts on LetsDefend, completed 50+ modules on CyberExam, and earned the HTB CDSA (Certified Defensive Security Analyst) certification.</p>
   </div>
-
+ 
   <div class="section">
     <h3>Education</h3>
     <p><strong>Istanbul Bilgi University</strong><br />
