--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
   <button id="enBtn" aria-pressed="false" type="button">English</button>
 <a href="yazilarim.html">
   <button id="enBtn" aria-pressed="false" type="button">
-    Siber Güvenlik Bloğu
+    Siber Güvenlik Blogu
   </button>
 </a>
 </div>
@@ -697,3 +697,4 @@
 
 </body>
 </html>
+
